fix: line wrap (#5)

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -46,42 +46,4 @@ html {
   display: flex;
   width: 100%;
   height: 100%;
-
-  > .separator {
-    background-color: var(--sn-stylekit-border-color);
-  }
-}
-
-.container.horizontal {
-  flex-direction: row;
-  overflow-x: clip;
-
-  .column {
-    flex: 1;
-  }
-
-  .separator {
-    width: 10px;
-  }
-}
-
-.container.vertical {
-  flex-direction: column;
-  overflow-y: clip;
-
-  .row.full {
-    height: 100%;
-  }
-
-  .row.half {
-    height: 40%;
-  }
-
-  .separator {
-    height: 1%;
-  }
-
-  .row.half:last-child {
-    height: 59%;
-  }
 }
